--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,6 +40,7 @@
     <button type="button" onclick="getBaseLayerList()">Start animation</button>
     <button type="button" onclick="getArtefactsList()">Get artefacts</button>
 </div>-->
+<script src="js/layers-animation.js"></script>
 <script src="js/cesium-overlay.js"></script>
 </body>
 </html>
