--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,23 +42,25 @@
             <tbody><tr>
                 <td>Frame rate</td>
                 <td>
-                    <input type="range" min="1" max="50" step="1" data-bind="value: framerate, valueUpdate: 'input'" onchange="layersAnimationController.changeFrameRate(this)">
-                    <input type="text" size="5" onchange="layersAnimationController.changeFrameRate(this)">
+                    <input type="range" min="1" max="30" step="1" data-bind="value: frameRate, valueUpdate: 'input'"
+                           onchange="layersAnimationController.changeFrameRate(this)">
+                    <input type="text" size="5" data-bind="value: frameRate" onchange="layersAnimationController.changeFrameRate(this)">
                 </td>
             </tr>
 
             <tr>
                 <td>Frame index</td>
                 <td>
-                    <input type="range" min="1" max="1" step="1">
-                    <input type="text" size="5">
+                    <input type="range" min="1" max="1" step="1" data-bind="value: frameIdx, valueUpdate: 'input'">
+                    <input type="text" size="5"  data-bind="value: frameIdx">
                 </td>
             </tr>
             </tbody></table>
         <table>
             <tbody><tr>
                 <td>
-                    <button name="button" onclick="layersAnimationController.animationStartPauseBtn(this)">Play</button>
+                    <button name="button" id="animationStartPauseBtn"
+                            onclick="layersAnimationController.animationStartPauseBtnClick(this)">Play</button>
                 </td><td>
                 <button name="button" onclick="layersAnimationController.animationStopBtn()">Stop</button>
             </td><td>
